--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,9 +1,9 @@
-button {
-  color: rgb(11, 197, 27) !important;
-  border: 2px solid rgb(7, 206, 23) !important;
+.greenBtn {
+  color: rgb(12, 175, 26) !important;
+  border: 2px solid rgb(12, 175, 26) !important;
 }
 
-button:hover {
+.greenBtn:hover {
   color: white !important;
-  background-color: rgb(7, 206, 23) !important;
+  background-color: rgb(12, 175, 26) !important;
 }
